--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,10 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background-image: 
+    radial-gradient(rgb(184, 199, 204) 14.8%, transparent 18.4%);
+  background-position: 4px 4px;
+  background-size: 8px 8px;  
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
@@ -18,3 +22,50 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+* {
+        margin: 0px;
+        padding: 0px;
+      }
+      img {
+        max-height: 20px;
+        max-width: 20px;
+        margin-left: 5px;
+        margin-right: 5px;
+        border: 1px solid black;
+      }
+      ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        list-style: none;
+
+      }
+      li {
+        display: flex;
+        align-items: center;
+        align-content: center;
+        margin-top: 5px;
+      }
+      p {
+        margin-top: 5px;
+        margin-left: 5px;
+      }
+      span {
+        font-size: 16px;
+      }
+
+      input {
+        margin-top: 5px;
+        margin-left: 5px;
+      }
+
+      .big--font {
+        font-size: 28px;
+      }
+
+      .big--img {
+        max-height: 30px;
+        max-width: 30px;
+        margin-right: 9px;
+      }
